--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,15 @@
-# ignore everything in the root except the "wp-content" directory.
-!wp-content/
+# images 이미지 무시!!
+!images/
 
-# ignore everything in the "wp-content" directory, except:
-# "mu-plugins", "plugins", "themes" directory
-wp-content/*
-!wp-content/mu-plugins/
-!wp-content/plugins/
-!wp-content/themes/
-
-# ignore these plugins
-wp-content/plugins/hello.php
-
-# ignore specific themes
-wp-content/themes/twenty*/
-
-# ignore node dependency directories
-node_modules/
-
-# ignore log files and databases
+# 각종파일 무시!
+*.jpg
+*.png
+*.gif
+*.svg
 *.log
-*.sql
-*.sqlite
+*.xlsx
+*.hwo
+*.doc
+*.psd
+*.ai
+*.pdf
